juno/qa/apps/arranger/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arranger
  annotations:
    secret.reloader.stakater.com/reload: "arranger-keycloak-credentials"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: arranger
  template:
    metadata:
      labels:
        app: arranger
    spec:
      volumes:
      - name: opensearch-ca-cert
        secret:
          secretName: opensearch-ca-certificate
          defaultMode: 0555
      - name: ingress-ca-certificate
        secret:
          secretName: cqdg-ingress-ca-certificate
          defaultMode: 0555
      - name: corefile
        configMap:
          name: coredns-zonefiles-corefile
          defaultMode: 0444
      - name: zonefile
        configMap:
          name: qa-domain-zonefile
          defaultMode: 0444
      - name: zonefile-copy
        emptyDir: {}
      dnsPolicy: None
      dnsConfig:
        nameservers:
        - 127.0.0.1
        searches:
        - search
        - cqdg-qa.svc.cluster.qa.cqdg
        - svc.cluster.qa.cqdg
        - cluster.qa.cqdg
        - juno
        options:
        - name: ndots
          value: "5"
      containers:
      - name: coredns
        image: ferlabcrsj/coredns:1.1.1
        command: ["/coredns"]
        args: ["-conf", "/opt/corefile/Corefile"]
        volumeMounts:
        - name: corefile
          mountPath: /opt/corefile
          readOnly: true
        - name: zonefile-copy
          mountPath: /opt/zonefiles
          readOnly: true
      - image: index.docker.io/ferlabcrsj/cqdg-api-arranger:746eb20c880f6be193186b10ce0b30b0ee54a296-1696362431 # {"$imagepolicy": "cqdg-qa-fluxcd:arranger"}
        name: arranger
        volumeMounts:
        - name: ingress-ca-certificate
          mountPath: /opt/ca-bundle
          readOnly: true
        - name: opensearch-ca-cert
          mountPath: /opt/opensearch-ca
          readOnly: true
        resources:
          requests:
            memory: "2048Mi"
            cpu: '2'
          limits:
            memory: "4096Mi"
            cpu: '2'
