juno/qa/apps/arranger/services.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: arranger
  name: arranger
spec:
  ports:
    - port: 5050
      protocol: TCP
      targetPort: 5050
  selector:
    app: arranger
